로그인 시 에러메시지 \n 삭제, 로그인dto id long 아닌 string으로 받기